force-app/main/default/objects/Offer__c/fields/AuthorizedServices__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedServices__c</fullName>
    <label>AuthorizedServices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>