force-app/main/default/objects/Offer__c/fields/BaseDiscount__c.field-meta.xml
<CustomField>
    <fullName>BaseDiscount__c</fullName>
    <label>BaseDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>