force-app/main/default/objects/Offer__c/fields/CardRecurrentCost__c.field-meta.xml
<CustomField>
    <fullName>CardRecurrentCost__c</fullName>
    <label>CardRecurrentCost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>