force-app/main/default/objects/Offer__c/fields/CardSetupCost__c.field-meta.xml
<CustomField>
    <fullName>CardSetupCost__c</fullName>
    <label>CardSetupCost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>