force-app/main/default/objects/Offer__c/fields/IsPreferredStation__c.field-meta.xml
<CustomField>
    <fullName>IsPreferredStation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPreferredStation</label>
    <type>Checkbox</type>
</CustomField>