force-app/main/default/objects/Offer__c/fields/MaxCardsPerPerson__c.field-meta.xml
<CustomField>
    <fullName>MaxCardsPerPerson__c</fullName>
    <label>MaxCardsPerPerson</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>