force-app/main/default/objects/Offer__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <label>OfferCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>