force-app/main/default/objects/Offer__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>