force-app/main/default/objects/Offer__c/fields/ParentContractId__c.field-meta.xml
<CustomField>
    <fullName>ParentContractId__c</fullName>
    <label>ParentContractId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>