force-app/main/default/objects/Offer__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>PaymentTerms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>