force-app/main/default/objects/Offer__c/fields/Ppb__c.field-meta.xml
<CustomField>
    <fullName>Ppb__c</fullName>
    <label>Ppb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>