force-app/main/default/objects/Offer__c/fields/PrefStationDiscount__c.field-meta.xml
<CustomField>
    <fullName>PrefStationDiscount__c</fullName>
    <label>PrefStationDiscount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>